--- a/index.html
+++ b/index.html
@@ -4,28 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <header class="header">
       <div class="container">
-        <a href="#" class="logo"><img src="./img/logo.svg" alt="" /></a>
+        <a href="#" data-aos="zoom-in" data-aos-duration="1000" class="logo"
+          ><img src="./img/logo.svg" alt=""
+        /></a>
       </div>
     </header>
     <main class="main">
       <div class="main-bg">
-        <img src="./img/flowers.png" alt="" />
+        <img
+          data-aos="zoom-in-left"
+          data-aos-duration="1500"
+          src="./img/flowers.png"
+          alt=""
+        />
       </div>
       <div class="main__content">
         <div class="container">
           <div class="main__inner">
-            <div class="main-title-img">
+            <div
+              class="main-title-img"
+              data-aos="zoom-in-up"
+              data-aos-duration="1500"
+            >
               <img src="./img/title.svg" alt="" />
             </div>
           </div>
           <div class="text-container">
-            <div class="title">Тест “Какая ты сказочная героиня”</div>
-            <div class="descr">
+            <div class="title" data-aos="fade-up">
+              Тест “Какая ты сказочная героиня”
+            </div>
+            <div class="descr" data-aos="fade-up">
               Дорогие наши девушки! Скажем не таясь: с вами жизнь, как в сказке.
               Вы всегда придете на помощь мудрым советом и делом, поддержите
               меланхоличный душевный разговор и громогласную разухабистую
@@ -38,7 +52,7 @@
             </div>
           </div>
           <div class="forms">
-            <form class="form-item">
+            <form class="form-item" data-aos="zoom-in-up">
               <div class="qestion-number">Вопрос 1</div>
               <div class="qestion-title">
                 Стереотип «Девушки, как сороки, любят все блестящее»
@@ -86,7 +100,7 @@
               </div>
             </form>
 
-            <form class="form-item">
+            <form class="form-item" data-aos="zoom-in-up">
               <div class="qestion-number">Вопрос 2</div>
               <div class="qestion-title">
                 Стереотип «Девушки водят хуже мужчин»
@@ -139,7 +153,7 @@
               </div>
             </form>
 
-            <form class="form-item">
+            <form class="form-item" data-aos="zoom-in-up">
               <div class="qestion-number">Вопрос 3</div>
               <div class="qestion-title">
                 Стереотип «Девушки не разбираются в технике»
@@ -190,7 +204,7 @@
               </div>
             </form>
 
-            <form class="form-item">
+            <form class="form-item" data-aos="zoom-in-up">
               <div class="qestion-number">Вопрос 4</div>
               <div class="qestion-title">
                 Стереотип «Женщины более эмоциональные»
@@ -242,7 +256,7 @@
               </div>
             </form>
 
-            <form class="form-item">
+            <form class="form-item" data-aos="zoom-in-up">
               <div class="qestion-number">Вопрос 5</div>
               <div class="qestion-title">
                 Стереотип «Каждая девушка хочет замуж и красивую свадьбу»
@@ -291,7 +305,7 @@
               </div>
             </form>
 
-            <form class="form-item">
+            <form class="form-item" data-aos="zoom-in-up">
               <div class="qestion-number">Вопрос 6</div>
               <div class="qestion-title">
                 Стереотип «Домашние дела – женская обязанность»
@@ -346,7 +360,7 @@
               </div>
             </form>
 
-            <form class="form-item">
+            <form class="form-item" data-aos="zoom-in-up">
               <div class="qestion-number">Вопрос 7</div>
               <div class="qestion-title">
                 Стереотип «После расставания девушки меняют прическу»
@@ -399,7 +413,7 @@
               </div>
             </form>
 
-            <form class="form-item">
+            <form class="form-item" data-aos="zoom-in-up">
               <div class="qestion-number">Вопрос 8</div>
               <div class="qestion-title">
                 Стереотип «Девушки любят принимать ванну»
@@ -451,7 +465,7 @@
               </div>
             </form>
 
-            <form class="form-item">
+            <form class="form-item" data-aos="zoom-in-up">
               <div class="qestion-number">Вопрос 9</div>
               <div class="qestion-title">Стереотип «Девушки любят шоппинг»</div>
               <div class="qestion-description">
@@ -501,7 +515,7 @@
               </div>
             </form>
 
-            <form class="form-item">
+            <form class="form-item" data-aos="zoom-in-up">
               <div class="qestion-number">Вопрос 10</div>
               <div class="qestion-title">
                 Стереотип «Девушки долго собираются»
@@ -550,11 +564,157 @@
                 </label>
               </div>
             </form>
-            <div class="submit-btn">Узнать результат</div>
+            <form class="form-item" data-aos="zoom-in-up">
+              <div class="qestion-number">Вопрос 11</div>
+              <div class="qestion-title">
+                Стереотип «Девушки мечтают о принце на белом коне»
+              </div>
+              <div class="qestion-description">
+                В королевстве объявили, что в соседнем замке появился загадочный
+                принц – статный, с белым конём и сундуком золота в придачу. Все
+                красные девицы шепчутся о нём, а ты сидишь у окна и думаешь:
+                нужен ли тебе такой герой? Как отреагируешь?
+              </div>
+              <div class="answer-list">
+                <label class="answer-item">
+                  <input type="radio" value="A" name="question" />
+                  <span
+                    >«Принц? О, я уже бегу расчёсывать волосы и примерять платье
+                    – вдруг он меня заметит и увезёт в закат!»</span
+                  >
+                </label>
+
+                <label class="answer-item">
+                  <input type="radio" value="B" name="question" />
+                  <span
+                    >«Пусть сначала докажет, что он не лентяй и не сбежит от
+                    работы, – конь конём, а мне надёжность важнее!»</span
+                  >
+                </label>
+
+                <label class="answer-item">
+                  <input type="radio" value="C" name="question" />
+                  <span
+                    >«Принц – это хорошо, но я бы лучше устроила для него пир да
+                    спела песню – пусть знает, как мы тут весело живём!»</span
+                  >
+                </label>
+
+                <label class="answer-item">
+                  <input type="radio" value="D" name="question" />
+                  <span
+                    >«Если он настоящий и поможет моим близким, то я сама его
+                    найду, хоть через леса и горы, – дело важнее
+                    мечтаний!»</span
+                  >
+                </label>
+                <label class="answer-item">
+                  <input type="radio" value="E" name="question" />
+                  <span>
+                    «Конь, принц… Мне бы лучше цветок аленький или сердце доброе
+                    – не в золоте счастье, а в душе!»</span
+                  >
+                </label>
+              </div>
+            </form>
+            <div class="submit-btn" data-aos="zoom-in-up">Узнать результат</div>
+          </div>
+          <div class="results">
+            <div class="result-item" data-result="A">
+              <div class="result-item__image">
+                <img src="./img/var-1.jpg" alt="" />
+              </div>
+              <div class="result-item__content">
+                <div class="result-item__plate">Результат</div>
+                <div class="result-item__name">Вы — Золушка</div>
+                <div class="result-item__descr">
+                  Максим Шлегель просил не упоминать эту героиню, потому что она
+                  была фактически крепостной, но давайте честно: Золушка –
+                  отзывчивая, трудолюбивая и верит в лучшее. Хороший пример для
+                  подражания. Как и ты. Все делаешь вовремя и четко, умеешь
+                  выглядеть эффектно и с тобой всегда спокойно.
+                </div>
+              </div>
+            </div>
+
+            <div class="result-item" data-result="B">
+              <div class="result-item__image">
+                <img src="./img/var-2.jpg" alt="" />
+              </div>
+              <div class="result-item__content">
+                <div class="result-item__plate">Результат</div>
+                <div class="result-item__name">Вы — Дюймовочка</div>
+                <div class="result-item__descr">
+                  С одной стороны, ты умеешь идти на уступки, с другой, знаешь
+                  себе цену. Но тем с тобой интереснее. А как нас восхищает твой
+                  характер: ты добрая, внимательная, очень милая, а в моменты
+                  дедлайнов тебе действительно достаточно ползернышка, ведь
+                  работа не ждет!
+                </div>
+              </div>
+            </div>
+
+            <div class="result-item" data-result="C">
+              <div class="result-item__image">
+                <img src="./img/var-3.jpg" alt="" />
+              </div>
+              <div class="result-item__content">
+                <div class="result-item__plate">Результат</div>
+                <div class="result-item__name">Вы — Снегурочка</div>
+                <div class="result-item__descr">
+                  В русских сказках у Снегурочки всегда трагичная судьба, но для
+                  нас ты та Снегурочка, которая выступает одним из символов
+                  Нового года. Ты – человек-праздник, с которым так приятно
+                  видеться хоть каждый день, и даже после долгой разлуки встречи
+                  с тобой – как со старым другом. В работе ты тоже незаменимый
+                  человек, который никогда не откажет в помощи.
+                </div>
+              </div>
+            </div>
+
+            <div class="result-item" data-result="D">
+              <div class="result-item__image">
+                <img src="./img/var-4.jpg" alt="" />
+              </div>
+              <div class="result-item__content">
+                <div class="result-item__plate">Результат</div>
+                <div class="result-item__name">
+                  Вы — Герда, «Снежная королева»
+                </div>
+                <div class="result-item__descr">
+                  Обычно это за мужчиной, как за каменной стеной, но для нас
+                  такая стена – ты. Ты преодолеешь все препятствия, договоришься
+                  с кем угодно, но обязательно выручишь в трудную минуту. Наши
+                  сердца просто тают, а руки сами собой собирают из последних
+                  льдинок этой зимы сразу три слова «вечность», «любим», «тебя».
+                </div>
+              </div>
+            </div>
+
+            <div class="result-item" data-result="E">
+              <div class="result-item__image">
+                <img src="./img/var-5.jpg" alt="" />
+              </div>
+              <div class="result-item__content">
+                <div class="result-item__plate">Результат</div>
+                <div class="result-item__name">
+                  Вы — Настенька, «Аленький цветочек»
+                </div>
+                <div class="result-item__descr">
+                  Неважно, какую должность занимает человек и какую одежду он
+                  носит. Ты ценишь в людях то, что у них внутри, и это подкупает
+                  нас больше всего. А еще у тебя действительно все получается,
+                  как по волшебству, и в нашем королевстве не обойтись без
+                  человека, который умеет немножко колдовать.
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </main>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
     <script src="./js/main.js"></script>
   </body>
 </html>
