--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
           </div>
           <div class="text-container">
             <div class="title" data-aos="fade-up">
-              Тест “Какая ты сказочная героиня”
+              Какая ты сказочная героиня
             </div>
-            <div class="descr" data-aos="fade-up">
+            <!-- <div class="descr" data-aos="fade-up">
               Дорогие наши девушки! Скажем не таясь: с вами жизнь, как в сказке.
               Вы всегда придете на помощь мудрым советом и делом, поддержите
               меланхоличный душевный разговор и громогласную разухабистую
@@ -49,7 +49,7 @@
               насколько они реальны, а заодно узнаем, на кого из сказочных
               героинь вы похожи. Пройдите наш маленький тест и получите ответ!
               Не забывайте делиться своими результатами в комментариях =)
-            </div>
+            </div> -->
           </div>
           <div class="forms">
             <form class="form-item" data-aos="zoom-in-up">
@@ -74,7 +74,7 @@
                 <label class="answer-item">
                   <input type="radio" value="B" name="question" />
                   <span
-                    >Я не прихотлива, достаточно многоквартирной
+                    >Я неприхотлива, достаточно многоквартирной
                     многоэтажки</span
                   >
                 </label>
@@ -107,8 +107,8 @@
               </div>
               <div class="qestion-description">
                 Королевство у нас хоть и небольшое, но передвигаться на своих
-                двоих – то еще удовольствие. Берем лошадей – желательно,
-                помощнее, – сжимаем поводья – и в путь?
+                двоих – то еще удовольствие. Берем лошадей – желательно помощнее
+                – сжимаем поводья – и в путь?
               </div>
               <div class="answer-list">
                 <label class="answer-item">
