--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </div>
           <div class="text-container">
             <div class="title" data-aos="fade-up">
-              Какая ты сказочная героиня
+              <img src="./img/title-question.svg" alt="" />
             </div>
             <!-- <div class="descr" data-aos="fade-up">
               Дорогие наши девушки! Скажем не таясь: с вами жизнь, как в сказке.
