--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               <div class="qestion-description">
                 Королевство у нас хоть и небольшое, но передвигаться на своих
                 двоих – то еще удовольствие. Берем лошадей – желательно помощнее
-                – сжимаем поводья – и в путь?
+                – сжимаем поводья и в путь?
               </div>
               <div class="answer-list">
                 <label class="answer-item">
